# hcg

./: .gitignore  LICENSE  functional-gl.cabal  hcg.cabal  stack.yaml
app/: App.hs  Ball.hs  Legacy.hs  Plot.hs  ShaderToy.hs
examples/: App.hs  Ball.hs  Heart.hs  Legacy.hs
glsl/app/: app_fragment.glsl  app_vertex.glsl  fragment.glsl  vertex.glsl
glsl/ball/: main.vert  vertex.glsl
glsl/heart/: main.frag  main.vert
glsl/plot/: fragment.glsl  plot_vertex.glsl  vertex.glsl
glsl/shadertoy/: main.frag  vertex.glsl
src/: Legacy.hs  Main.hs
src/GL/: Foreign.hs  GLEnv.hs  GLSL.hs  Geometric.hs  Math.hs  Primitive.hs  Texture.hs  WithGL.hs
src/GL/Math/: Tensor.hs
src/GL/MissingH/: TH.hs
