name:                       functional-gl
version:                    0.1.0.0
synopsis:                   Graphic applications in functional programming language.
description:                Please see README.md
homepage:                   http://github.com/sighingnow/functional-gl#readme
license:                    BSD3
license-file:               LICENSE
author:                     Tao He
maintainer:                 sighingnow@yandex.com
copyright:                  Copyright: (c) 2015-2016 Tao He
category:                   Simple
build-type:                 Simple
cabal-version:              >=1.10

executable app
    other-modules:
        GL.GLEnv
        GL.WithGL
    hs-source-dirs:         src
    main-is:                Main.hs
    default-language:       Haskell2010
    build-depends:          base             >= 4.7 && < 5
                          , gl               >= 0.7.8.1
                          , GLFW-b           >= 1.4.8.0
                          , vector           >= 0.11.0.0
    ghc-options:            -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N
