name:                       hcg
version:                    0.1.0.0
synopsis:                   Graphic applications in Haskell.
description:                Please see README.md
homepage:                   http://github.com/sighingnow/hcg#readme
license:                    BSD3
license-file:               LICENSE
author:                     Tao He
maintainer:                 sighingnow@yandex.com
copyright:                  Copyright: (c) 2015-2016 Tao He
category:                   Simple
build-type:                 Simple
cabal-version:              >=1.10

flag example
    default: True
    description: Build examples.

Library
    exposed-modules:
        GL.Foreign
        GL.Geometric
        GL.GLEnv
        GL.Math
        GL.GLSL
        GL.Math.Tensor
        GL.Texture
        GL.MissingH.TH
        GL.Primitive
        GL.WithGL
    hs-source-dirs:         src
    other-modules:
    build-depends:          base                    >= 4.7 && < 5
                          , gl                      >= 0.7.8.1
                          , text                    >= 1.2.2.1
                          , split                   >= 0.2.3.1
                          , GLFW-b                  >= 1.4.8.0
                          , vector                  >= 0.11.0.0
                          , JuicyPixels             >= 3.2.7.2
                          , transformers            >= 0.5.2.0
                          , template-haskell        >= 2.11.0.0
                          , unordered-containers    >= 0.2.7.0
    default-language:       Haskell2010
    ghc-options:            -O2 -Wall -Wextra

-- | applications.
executable plot
    hs-source-dirs:         app
    main-is:                Plot.hs
    default-language:       Haskell2010
    build-depends:          base                    >= 4.7 && < 5
                          , hcg
                          , gl                      >= 0.7.8.1
                          , GLFW-b                  >= 1.4.8.0
                          , vector                  >= 0.11.0.0
                          , unordered-containers    >= 0.2.7.0
    ghc-options:            -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N

executable shadertoy
    hs-source-dirs:         app
    main-is:                ShaderToy.hs
    default-language:       Haskell2010
    build-depends:          base                    >= 4.7 && < 5
                          , hcg
                          , gl                      >= 0.7.8.1
                          , lens                    >= 4.14
                          , GLFW-b                  >= 1.4.8.0
                          , vector                  >= 0.11.0.0
                          , unordered-containers    >= 0.2.7.0
    ghc-options:            -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N

-- | examples.
executable legacy
    hs-source-dirs:         examples
    main-is:                Legacy.hs
    default-language:       Haskell2010
    build-depends:          base                    >= 4.7 && < 5
                          , hcg
                          , gl                      >= 0.7.8.1
                          , GLFW-b                  >= 1.4.8.0
    if !flag(example)
        buildable:          False
    ghc-options:            -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N

executable app
    hs-source-dirs:         examples
    main-is:                App.hs
    default-language:       Haskell2010
    build-depends:          base                    >= 4.7 && < 5
                          , hcg
                          , gl                      >= 0.7.8.1
                          , GLFW-b                  >= 1.4.8.0
                          , unordered-containers    >= 0.2.7.0
    if !flag(example)
        buildable:          False
    ghc-options:            -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N

executable ball
    hs-source-dirs:         examples
    main-is:                Ball.hs
    default-language:       Haskell2010
    build-depends:          base                    >= 4.7 && < 5
                          , hcg
                          , gl                      >= 0.7.8.1
                          , GLFW-b                  >= 1.4.8.0
                          , vector                  >= 0.11.0.0
                          , unordered-containers    >= 0.2.7.0
    if !flag(example)
        buildable:          False
    ghc-options:            -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N


executable heart
    hs-source-dirs:         examples
    main-is:                Heart.hs
    default-language:       Haskell2010
    build-depends:          base                    >= 4.7 && < 5
                          , hcg
                          , gl                      >= 0.7.8.1
                          , GLFW-b                  >= 1.4.8.0
                          , unordered-containers    >= 0.2.7.0
    if !flag(example)
        buildable:          False
    ghc-options:            -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N
